<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.hawy.www.ui.main.HomeFragment"
        android:label="@string/home_tab"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addSessionFragment"
            app:destination="@id/addSessionFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSessionFragment"
        android:name="com.hawy.www.ui.main.AddSessionFragment"
        tools:layout="@layout/fragment_add_session">
        <action
            android:id="@+id/action_addSessionFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.hawy.www.ui.main.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/action_editProfileFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.hawy.www.ui.main.ProfileFragment"
        android:label="@string/profile_tab"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/discoverFragment"
        android:name="com.hawy.www.ui.main.DiscoverFragment"
        android:label="@string/discover_tab"
        tools:layout="@layout/fragment_discover" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.hawy.www.ui.main.MapsFragment"
        android:label="@string/map_tab"
        tools:layout="@layout/fragment_maps" />
</navigation>