<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.ForgetPasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/forget_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/reset_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset"
            android:textSize="24sp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/ge_ss_text_medium_26"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/please_enter_your_email"
            android:fontFamily="@font/ge_ss_two_light_28"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="true"
            android:hint="@string/enter_your_email"
            android:autofillHints="name"
            android:inputType="textEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/back_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/ge_ss_text_medium_26"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>